# CMakeTemplate

./: .clang-format  .gitignore  CmakeLists.txt  LICENSE  License.txt  README.md
modules/: CMakeLists.txt
modules/log/: CMakeLists.txt  log.cpp  log.h
modules/math/: CMakeLists.txt  usermath.cpp  usermath.h
src/: CMakeLists.txt  main.cpp
test/: CMakelists.txt
test/testInt/: CMakelists.txt  main.cpp
test/testVld/: CMakelists.txt  main.cpp
